# gtklock

./: .clangd  .gitignore  Makefile  README.md  auth.c  auth.h  config.c  example-style.css  gtklock.1.scd  gtklock.c  gtklock.h  input-inhibitor.c  input-inhibitor.h  makefile  meson.build  meson.options  module.c  source.c  window.c  wlr-input-inhibitor-unstable-v1.xml  xdg.c
assets/: example-style.css
include/: auth.h  config.h  gtklock.h  input-inhibitor.h  module.h  util.h  window.h  xdg.h
man/: gtklock.1.scd  meson.build
pam/: gtklock
po/: LINGUAS  POTFILES  cs.po  de.po  eo.po  gtklock.pot  meson.build  pt_BR.po  ro.mo  ro.po  ru.po  sr.po  sr@latin.po  zh_CN.po
res/: gtklock.ui  meson.build  ui.gresource.xml
src/: auth.c  config.c  gtklock.c  input-inhibitor.c  meson.build  module.c  source.c  util.c  window.c  xdg.c
subprojects/: gtk-session-lock.wrap  gtk4-layer-shell.wrap
util/: version.mk
wayland/: meson.build
